--- a/.github/workflows/update_readme.yaml
+++ b/.github/workflows/update_readme.yaml
@@ -35,4 +35,5 @@ jobs:
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git add README.md
           git commit -m "📝 docs: update README [skip ci]" || echo "No changes to commit"
-          git push
+          git push https://github-actions:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git HEAD:${{ github.ref }}
+    
