--- a/.github/workflows/update_readme.yaml
+++ b/.github/workflows/update_readme.yaml
@@ -13,6 +13,8 @@ jobs:
       # 检出代码仓库
       - name: Checkout Repository
         uses: actions/checkout@v3
+        with:
+          persist-credentials: false  # 禁用默认的凭据，确保使用 GITHUB_TOKEN
 
       # 设置 Python 环境
       - name: Setup Python
@@ -35,5 +37,4 @@ jobs:
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git add README.md
           git commit -m "📝 docs: update README [skip ci]" || echo "No changes to commit"
-          git push https://github-actions:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git HEAD:${{ github.ref }}
-    
+          git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git HEAD:${{ github.ref }}
